--- a/glide.yaml
+++ b/glide.yaml
@@ -2,3 +2,4 @@ package: github.com/bypasslane/gzr
 import:
 - package: github.com/spf13/cobra
 - package: github.com/spf13/viper
+- package: github.com/kubernetes/client-go
