Pulling deploy info from active k8s instance

--- a/glide.yaml
+++ b/glide.yaml
@@ -2,4 +2,5 @@ package: github.com/bypasslane/gzr
 import:
 - package: github.com/spf13/cobra
 - package: github.com/spf13/viper
-- package: github.com/kubernetes/client-go
+- package: k8s.io/client-go
+  version: release-2.0
