Add etcd deps to glide
NDEV-1300

* Add deps to glide.yaml and glide.lock

--- a/glide.yaml
+++ b/glide.yaml
@@ -6,4 +6,5 @@ import:
   version: release-2.0
 - package: github.com/gorilla/mux
 - package: github.com/urfave/negroni
-
+- package: github.com/coreos/etcd
+  version: ~3.1.0
