--- a/glide.yaml
+++ b/glide.yaml
@@ -8,3 +8,5 @@ import:
 - package: github.com/urfave/negroni
 - package: github.com/coreos/etcd
   version: ~3.1.0
+- package: github.com/boltdb/bolt
+  version: ~1.3.0
