--- a/glide.yaml
+++ b/glide.yaml
@@ -5,7 +5,9 @@ import:
 - package: k8s.io/client-go
   version: release-2.0
 - package: github.com/gorilla/mux
+  version: ^1.3.0
 - package: github.com/urfave/negroni
+  version: ^0.2.0
 - package: github.com/coreos/etcd
   version: ~3.1.0
 - package: github.com/boltdb/bolt
