--- a/gozer-web/package.json
+++ b/gozer-web/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "bootstrap-sass": "^3.3.7",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
