--- a/glide.yaml
+++ b/glide.yaml
@@ -12,3 +12,7 @@ import:
   version: ~3.1.0
 - package: github.com/boltdb/bolt
   version: ~1.3.0
+- package: github.com/bradfitz/slice
+- package: go4.org
+  subpackages:
+  - reflectutil
