--- a/glide.yaml
+++ b/glide.yaml
@@ -7,7 +7,7 @@ import:
 - package: github.com/gorilla/mux
   version: ^1.3.0
 - package: github.com/urfave/negroni
-  version: ^0.2.0
+  version: c0db5feaa33826cd5117930c8f4ee5c0f565eec6
 - package: github.com/coreos/etcd
   version: ~3.1.0
 - package: github.com/boltdb/bolt
@@ -16,3 +16,10 @@ import:
 - package: go4.org
   subpackages:
   - reflectutil
+- package: github.com/Sirupsen/logrus
+  version: ^0.11.5
+- package: github.com/spf13/pflag
+- package: github.com/meatballhat/negroni-logrus
+- package: github.com/pkg/errors
+  version: ^0.8.0
+- package: github.com/GeertJohan/go.rice
