converting to simpler boxedRice tool

--- a/glide.yaml
+++ b/glide.yaml
@@ -22,4 +22,4 @@ import:
 - package: github.com/meatballhat/negroni-logrus
 - package: github.com/pkg/errors
   version: ^0.8.0
-- package: github.com/GeertJohan/go.rice
+- package: github.com/bypasslane/boxedRice
